# Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json
Api/: CMakeLists.txt
Api/include/: ApiHeader.hpp  RenderMapApi.hpp  WindowApi.hpp
Api/src/: RenderMapApi.cpp  WindowApi.cpp
Core/: CMakeLists.txt
Core/include/: Camera.hpp  Cube2DObj.hpp  Frustum.hpp  GlErrorUtils.hpp  GraphicalObject.hpp  IRenderUnit.hpp  MyClass.h  ProgramShader.hpp  RenderMap.hpp  RenderUnit.hpp  TestObj.hpp  TestVAO.hpp  Texture2DObj.hpp  Transformer.hpp  VAOCube2D.hpp  VAOTexture2D.hpp  VertexArrayObject.hpp  Window.hpp
Core/include/camera/: Orthographic.hpp  Perspective.hpp
Core/include/data/: RectangleData.hpp
Core/include/data_structs/: GraphicalObjects.hpp
Core/include/enums/: ShaderType.hpp
Core/include/structs/: Shader.hpp  Texture2D.hpp  Transform3D.hpp  WindowData.hpp
Core/include/unit/: Cube2DObj.hpp.backup  Rectangle.hpp  TestObj.hpp.backup  Texture2DObj.hpp.backup
Core/include/vao/: RectangleVAO.hpp
Core/src/: CMakeLists.txt  Camera.cpp  Cube2DObj.cpp  GlErrorUtils.cpp  GraphicalObject.cpp  MyClass.cpp  Perspective.cpp  ProgramShader.cpp  RenderMap.cpp  TestObj.cpp  TestVAO.cpp  Texture2DObj.cpp  Transformer.cpp  VAOCube2D.cpp  VAOTexture2D.cpp  VertexArrayObject.cpp  Window.cpp
Core/src/camera/: Camera.cpp  Orthographic.cpp  Perspective.cpp
Core/src/data_structs/: GraphicalObjects.cpp
Core/src/unit/: Cube2DObj.cpp.backup  Rectangle.cpp  TestObj.cpp.backup  Texture2DObj.cpp.backup
Core/src/vao/: RectangleVAO.cpp  TestVAO.cpp.backup  VAOCube2D.cpp.backup  (+1 more)
(+8 files in other folders)
